Upgrade to AAS v3.1 (#1413)
* deps: update aas4j to 2.0.1
* feat: SML.orderRelevant default to false
* docs: changelog + readme updates
* feat: update default api prefix
* chore: mark APIv3.0 function as deprecated
* feat: add SearchAllAssetAdministrationShellIdsByAssetLinkRequestHandler
* feat: remove duplicate request handling logic
* feat: update now-optional fields
---------

Co-authored-by: Tino Bischoff <tino.bischoff@iosb.fraunhofer.de>
Co-authored-by: Michael Jacoby <michael.jacoby@iosb.fraunhofer.de>